src/objects/Aero_Default_User_Setting__mdt/Aero_Default_User_Setting__mdt.object-meta.xml
<CustomObject>
    <description>used for user &apos;Aero Default&apos;</description>
    <label>Case User Setting</label>
    <pluralLabel>Case User Settings</pluralLabel>
</CustomObject>