src/objects/Aero_Default_User_Setting__mdt/fields/Aircraft_Connectivity_Service_Management__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Connectivity_Service_Management__c</fullName>
    <label>Aircraft Connectivity Service Management</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>