src/objects/Aero_Default_User_Setting__mdt/fields/ATR_RMU_API_Username__c.field-meta.xml
<CustomField>
    <fullName>ATR_RMU_API_Username__c</fullName>
    <label>ATR RMU API Username</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>