src/objects/Aero_Default_User_Setting__mdt/fields/DeniedPartyScreening_APIUser__c.field-meta.xml
<CustomField>
    <fullName>DeniedPartyScreening_APIUser__c</fullName>
    <description>DeniedPartyScreening APIUser username</description>
    <label>DeniedPartyScreening APIUser</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>