src/objects/Aero_Default_User_Setting__mdt/fields/Effortless_Orders_Username__c.field-meta.xml
<CustomField>
    <fullName>Effortless_Orders_Username__c</fullName>
    <description>Effortless Orders Username</description>
    <label>Effortless Orders Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>