src/objects/Aero_Default_User_Setting__mdt/fields/IsOrgDefault__c.field-meta.xml
<CustomField>
    <fullName>IsOrgDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOrgDefault</label>
    <type>Checkbox</type>
</CustomField>