src/objects/Aero_Default_User_Setting__mdt/fields/MySpace_Web_Username__c.field-meta.xml
<CustomField>
    <fullName>MySpace_Web_Username__c</fullName>
    <description>username for MySpace Web Portal user</description>
    <label>MySpace Web Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>