src/objects/Aero_Default_User_Setting__mdt/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>Aero Default Username</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>